slight build optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(throughput CXX C)
 
 set(CMAKE_CXX_FLAGS "-g --std=c++11 -Wall -Wextra -Werror -Wno-unknown-warning-option -Wno-unused-parameter -Wno-unused-local-typedefs -Wno-null-dereference -DGTEST_USE_OWN_TR1_TUPLE=1 -D__STDC_FORMAT_MACROS")
 
-if(EXISTS "$ENV{HOME}/git/kinetic-cpp-client/")
-   set(KINETIC_CLIENT_PATH "$ENV{HOME}/git/kinetic-cpp-client/")
+set(KINETIC_CLIENT_PATH "$ENV{HOME}/git/kinetic-cpp-client/")
+if(EXISTS ${KINETIC_CLIENT_PATH})
    message("Found existing kinetic-cpp-client at ${KINETIC_CLIENT_PATH}")
 else()
    message(FATAL_ERROR "Existing kinetic-cpp-client not found. Enter correct path.")
