--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(throughput CXX C)
 
 set(CMAKE_CXX_FLAGS "-g --std=c++11 -Wall -Wextra -Werror -Wno-unknown-warning-option -Wno-unused-parameter -Wno-unused-local-typedefs -Wno-null-dereference -DGTEST_USE_OWN_TR1_TUPLE=1 -D__STDC_FORMAT_MACROS")
 
-set(KINETIC_CLIENT_PATH  "$ENV{HOME}/git/kinetic-cpp-client-2.0.4")
+set(KINETIC_CLIENT_PATH  "$ENV{HOME}/git/kinetic-cpp-client")
 set(KINETIC_CLIENT_BUILD "${KINETIC_CLIENT_PATH}")
 
 if(EXISTS ${KINETIC_CLIENT_PATH} AND EXISTS ${KINETIC_CLIENT_BUILD})
@@ -39,8 +39,7 @@ endif(APPLE)
 
 add_executable(throughput
      throughput.cc
-     CustomConnection.cc
-     WrapperConnection.cc
+     ActiveListenerConnection.cc
 )
 add_dependencies(throughput
     kinetic_cpp_client
