--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,17 @@
 cmake_minimum_required(VERSION 2.8.6)
 project(throughput CXX C)
 
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
+find_package(kinetic-c++ REQUIRED)
+
 set(CMAKE_CXX_FLAGS "-g --std=c++11 -Wall -Wextra -Werror -Wno-unknown-warning-option -Wno-unused-parameter -Wno-unused-local-typedefs -Wno-null-dereference -DGTEST_USE_OWN_TR1_TUPLE=1 -D__STDC_FORMAT_MACROS")
 
-set(KINETIC_CLIENT_PATH  "$ENV{HOME}/git/kinetic-cpp-client")
-set(KINETIC_CLIENT_BUILD "${KINETIC_CLIENT_PATH}")
-
-if(EXISTS ${KINETIC_CLIENT_PATH} AND EXISTS ${KINETIC_CLIENT_BUILD})
-   message("Found existing kinetic-cpp-client at ${KINETIC_CLIENT_PATH}")
-else()
-   message(FATAL_ERROR "Existing kinetic-cpp-client not found. Enter correct path.")
-endif()
-
 include_directories(
-    ${KINETIC_CLIENT_PATH}/vendor/include
-    ${KINETIC_CLIENT_PATH}/src/main/generated
-    ${KINETIC_CLIENT_PATH}/include
+    ${KINETIC-C++_INCLUDE_DIRS}
 )
 
 set(LIBRARY_DEPENDENCIES
-    ${KINETIC_CLIENT_BUILD}/libkinetic_client.a
-    ${KINETIC_CLIENT_BUILD}/vendor/lib/libglog.a
-    ${KINETIC_CLIENT_BUILD}/vendor/lib/libgflags.a
-    ${KINETIC_CLIENT_BUILD}/vendor/lib/libssl.a
-    ${KINETIC_CLIENT_BUILD}/vendor/lib/libcrypto.a
-    ${KINETIC_CLIENT_BUILD}/vendor/lib/libprotobuf.a
-
-    
+    ${KINETIC-C++_LIBRARIES}
     ${CMAKE_THREAD_LIBS_INIT}
     dl
 )
@@ -39,7 +24,6 @@ endif(APPLE)
 
 add_executable(throughput
      throughput.cc
-     ActiveListenerConnection.cc
 )
 add_dependencies(throughput
     kinetic_cpp_client
