Put incorrect SHA1 tag along with keys

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(throughput CXX C)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 find_package(kinetic-c++ REQUIRED)
 
-set(CMAKE_CXX_FLAGS "-g --std=c++11 -Wall -Wextra -Werror -Wno-unknown-warning-option -Wno-unused-parameter -Wno-unused-local-typedefs -Wno-null-dereference -DGTEST_USE_OWN_TR1_TUPLE=1 -D__STDC_FORMAT_MACROS")
+set(CMAKE_CXX_FLAGS "-g --std=c++11 -Wall")
 
 include_directories(
     ${KINETIC-C++_INCLUDE_DIRS}
