Now with async requests with defined queue depth. Re-using the kineticio callbacks for that.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ else()
 endif(APPLE)
 
 add_executable(throughput
+     KineticCallbacks.cc
      throughput.cc
 )
 target_link_libraries(throughput
